examples/test/testpolicy1151.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1151
  namespace: namespace171
spec:
  podSelector:
    matchLabels:
      key27: value42
      key33: value8
      key45: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value14
          key37: value25
      podSelector:
        matchLabels:
          key12: value16
          key45: value12
